--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "less": "^4.1.3",
+    "prettier": "^2.6.2",
     "unplugin-auto-import": "^0.8.7",
     "vant": "^3.5.0",
     "vue": "^3.2.25",
