--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.1.1",
     "less": "^4.1.3",
     "prettier": "^2.6.2",
     "unplugin-auto-import": "^0.8.7",
@@ -21,5 +26,12 @@
     "vite": "^2.9.9",
     "vite-plugin-style-import": "1.4.1",
     "vue-tsc": "^0.34.7"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "printWidth": 100,
+    "htmlWhitespaceSensitivity": "ignore",
+    "arrowParens": "avoid",
+    "jsxSingleQuote": true
   }
 }
