--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-vue": "^9.1.1",
     "less": "^4.1.3",
     "prettier": "^2.6.2",
+    "rollup": "^2.77.2",
     "unplugin-auto-import": "^0.8.7",
     "vant": "^3.5.0",
     "vue": "^3.2.25",
@@ -25,7 +26,7 @@
     "typescript": "^4.5.4",
     "vite": "^3.0.3",
     "vite-plugin-style-import": "1.4.1",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.39.0"
   },
   "prettier": {
     "trailingComma": "all",
